--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import "tailwindcss";
 
 :root {
@@ -14,8 +13,10 @@
 
   /* custom class goes here */
   --color-primary: #1a1e42;
-  --font-dm-sans: "DM Sans", sans-serif;
-  --font-inter: "Inter", sans-serif;
+
+  --font-inter: var(--font-inter);
+  --font-dm-sans: var(--font-dm-sans);
+  --font-goodly: var(--font-goodly);
 }
 
 body {
