--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@
   /* custom class goes here */
   --color-primary: #1a1e42;
   --color-secondary: #f8fafc;
+  --color-secondary-50: #e3effc;
   --color-disabled: #b2b2b2;
   --color-ink-darkest: #090a0a;
   --color-ink-light: #6c7072;
